added benchmark 1 page and set home page as benchmark 1 page for now.

--- a/public/benchmark1/index.html
+++ b/public/benchmark1/index.html
@@ -7,23 +7,195 @@
 
 <body>
 
-    <h2 style="width:750px" align="center">
+    <h2 align="center">
         Source C0de<br>
         Game Design Document
     </h2>
 
-    <h4 style="width:750px" align="center">
+    <h4 align="center">
         by Samuel Hoffmann, Max Wertheim, and Aidan Russell
+    </h4>
+    <h4 align="center">
+        <a href="https://github.com/SamuelHHoffmann/Source-C0de">Github Repository</a>
     </h4>
 
     <div id="content">
 
-        <h3>Benchmark 1</h3>
+        <h3>Introduction:</h3>
 
-        <p>This page is for Benchmark 1</p>
+        <p>This document describes the game Source C0de; a 2D side scrolling puzzle game
+            where the player is able to interact and change the in-game physics and input systems.
+            These mechanics will allow players to solve puzzles in fun and interactive ways not
+            possible in other 2D puzzle games.</p>
+        <br>
+
+        <h3>Technology:</h3>
+
+        <p>Source C0de is developed on the Phaser HTML and WebGL game framework.
+        </p>
+        <br>
+
+        <h3>Gameplay:</h3>
+
+        <p>Source C0de is a 2D platformer with unique puzzle mechanics. The player moves from
+            level to level with a page scrolling mechanic. Each level has a unique physics puzzle to
+            solve which provides a challenge for the player whose goal is to get to the right side of
+            the screen. Each level has pseudo code like statements which allow the player to
+            interact with the mechanics of the game world. The player can manipulate the code
+            blocks by hitting, picking up, and placing them in assigned locations to make completing
+            the levels easier.<br>
+            <br>
+            First Level Idea: Player is shown code blocks to move forward and their keys. The
+            player has the ability to fix the keys so they learn how to walk and also set the keys to
+            WASD.<br>
+            <br>
+            Final Level Idea: Fighting the final boss (pictured below), the boss opens rifts which nort
+            has to fix one after another. After you change “boss.armored” to false you will see the
+            source code of the boss. Lastly, you will see “boss.isAlive == true” under the source
+            code of the boss and changing it to false will end the game.<br>
+
+
+        </p>
+        <br>
+
+        <p align="center">
+            <br>
+            ( ͡° ͜ʖ ͡°)<br>
+            ╚═(███)═╝<br>
+            &#160;╚═(███)═╝<br>
+            &#160;&#160;╚═(███)═╝<br>
+            &#160;&#160;&#160;╚═(███)═╝<br>
+            &#160;&#160;╚═(███)═╝<br>
+            &#160;╚═(███)═╝<br>
+            ╚═(███)═╝<br>
+            &#160;╚═(███)═╝<br>
+            &#160;&#160;╚═(███)═╝<br>
+            &#160;&#160;&#160;╚═(███)═╝<br>
+            &#160;&#160;╚═(███)═╝<br>
+            &#160;╚═(███)═╝<br>
+            ╚═(███)═╝<br>
+            <br>
+        </p>
+        <br>
+
+
+        <h3>Objective:</h3>
+
+        <p>Solve the puzzles. Save the system. Ride lightcycles. You are Nort. Win over the babes.
+            *lightcycles will not be in the first version of the game. Nort most definitely will.
+            The babes are up to you.
+        </p>
+        <br>
+
+        <h3>Story:</h3>
+
+        <p>
+        </p>
+        <br>
+
+        <h2>Controls:</h2>
+
+        <h3>Movement:</h3>
+
+        <p>WASD will be used for movement and Space for jumping with various
+            other key inputs for other actions. Most input keys will be user manipulatable
+            allowing the user to swap keys for various actions to make beating a level easier.
+        </p>
+        <br>
+
+        <h3>Interaction:</h3>
+
+        <p>The player will be able to interact with various aspects of the game world.
+            The player will have the ability to hit, pick up, carry, and place various code block
+            elements which will affect parts of the game world. By moving words or letters
+            the player will manipulate how their character moves and how the game world acts.
+        </p>
+        <br>
+
+        <h3>Pause:</h3>
+
+        <p>The “escape” key pauses the game!
+        </p>
+        <br>
+
+        <h3>GUI:</h3>
+
+        <p>
+        </p>
+        <br>
+
+        <h3>Artwork:</h3>
+
+        <p>Nort (main character): Nort will not take damage or die in the initial version of the game.
+            Walking Left
+            Walking Right
+            Jump Left
+            Jump Right
+            Grab Left
+            Grab Right
+            Carry Left
+            Carry Right
+            (optional actions later on):
+            Jetpack left
+            Jetpack right
+
+            Background Scenes:
+            Dusty circuitry
+
+            Screen Rifts:
+            2 line rift
+            3 line rift
+            4 line rift
+            5 line rift
+
+            Tileset:
+            Platforms
+            Tiles for distorted sections of world
+
+        </p>
+        <br>
+
+        <h3>Sound Effects:</h3>
+
+        <p> Put block in place
+            Knock block out of place
+            Go to next level
+            Reset a level
+            Walking
+            Running
+            Jumping
+            Idle
+
+        </p>
+        <br>
+
+        <h3>Music:</h3>
+
+        <p>Music will be created using BeepBox (beepbox.co), and will be based on “themes”.
+            There will be a Main Theme (the theme of our main character Nort),
+
+            These themes will be worked into original music, and there will be a few tracks total.
+
+
+        </p>
+        <br>
+
+        <h3>Ambient Sounds:</h3>
+
+        <p>
+        </p>
+        <br>
+
+        <h3>Objective:</h3>
+
+        <p> Hint sounds
+            Distortion sound
+        </p>
         <br>
 
     </div>
+
+
 
 
 
