--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
         <h3>Introduction:</h3>
 
-        <p>This document describes the game Source C0de; a 2D side scrolling puzzle game
+        <p style="margin-left: 40px">This document describes the game Source C0de; a 2D side scrolling puzzle game
             where the player is able to interact and change the in-game physics and input systems.
             These mechanics will allow players to solve puzzles in fun and interactive ways not
             possible in other 2D puzzle games.</p>
@@ -31,13 +31,13 @@
 
         <h3>Technology:</h3>
 
-        <p>Source C0de is developed on the Phaser HTML and WebGL game framework.
+        <p style="margin-left: 40px">Source C0de is developed on the Phaser HTML and WebGL game framework.
         </p>
         <br>
 
         <h3>Gameplay:</h3>
 
-        <p>Source C0de is a 2D platformer with unique puzzle mechanics. The player moves from
+        <p style="margin-left: 40px">Source C0de is a 2D platformer with unique puzzle mechanics. The player moves from
             level to level with a page scrolling mechanic. Each level has a unique physics puzzle to
             solve which provides a challenge for the player whose goal is to get to the right side of
             the screen. Each level has pseudo code like statements which allow the player to
@@ -58,7 +58,7 @@
         </p>
         <br>
 
-        <p align="center">
+        <p align="center" , style="margin-left: 40px">
             <br>
             ( ͡° ͜ʖ ͡°)<br>
             ╚═(███)═╝<br>
@@ -81,15 +81,26 @@
 
         <h3>Objective:</h3>
 
-        <p>Solve the puzzles. Save the system. Ride lightcycles. You are Nort. Win over the babes.
-            *lightcycles will not be in the first version of the game. Nort most definitely will.
+        <p style="margin-left: 40px">Solve the puzzles. Save the system. Ride lightcycles. You are Nort. Win over the
+            babes.
+        </p>
+        <p style="margin-left: 40px; font-size:80%;">*lightcycles will not be in the first version of the game. Nort
+            most definitely will.
             The babes are up to you.
         </p>
         <br>
 
+
+
         <h3>Story:</h3>
 
-        <p>
+        <p style="margin-left: 40px">Something is wrong with the world -- holes have been torn in the fabric of reality,
+            allowing people to change things for better or worse. You are Nort, one of the people
+            who has learned to/has the ability to manipulate the world’s Source C0de (name drop).
+            It is your responsibility to venture deeper and deeper into the world, towards the cause
+            of this disruption, while fixing reality along the way. Fixing the Source C0de unlocks
+            greater and greater abilities to make your life easier, but the puzzles also become more
+            challenging. Will you help Nort save the world and fix the Source C0de?
         </p>
         <br>
 
@@ -97,7 +108,7 @@
 
         <h3>Movement:</h3>
 
-        <p>WASD will be used for movement and Space for jumping with various
+        <p style="margin-left: 40px">WASD will be used for movement and Space for jumping with various
             other key inputs for other actions. Most input keys will be user manipulatable
             allowing the user to swap keys for various actions to make beating a level easier.
         </p>
@@ -105,7 +116,7 @@
 
         <h3>Interaction:</h3>
 
-        <p>The player will be able to interact with various aspects of the game world.
+        <p style="margin-left: 40px">The player will be able to interact with various aspects of the game world.
             The player will have the ability to hit, pick up, carry, and place various code block
             elements which will affect parts of the game world. By moving words or letters
             the player will manipulate how their character moves and how the game world acts.
@@ -114,7 +125,7 @@
 
         <h3>Pause:</h3>
 
-        <p>The “escape” key pauses the game!
+        <p style="margin-left: 40px">The “escape” key pauses the game!
         </p>
         <br>
 
@@ -126,70 +137,65 @@
 
         <h3>Artwork:</h3>
 
-        <p>Nort (main character): Nort will not take damage or die in the initial version of the game.
-            Walking Left
-            Walking Right
-            Jump Left
-            Jump Right
-            Grab Left
-            Grab Right
-            Carry Left
-            Carry Right
-            (optional actions later on):
-            Jetpack left
-            Jetpack right
-
-            Background Scenes:
-            Dusty circuitry
-
-            Screen Rifts:
-            2 line rift
-            3 line rift
-            4 line rift
-            5 line rift
-
-            Tileset:
-            Platforms
-            Tiles for distorted sections of world
+        <p style="margin-left: 40px">Nort (main character): Nort will not take damage or die in the initial version of
+            the game.<br>
+            Walking Left<br>
+            Walking Right<br>
+            Jump Left<br>
+            Jump Right<br>
+            Grab Left<br>
+            Grab Right<br>
+            Carry Left<br>
+            Carry Right<br>
+            (optional actions later on):<br>
+            Jetpack left<br>
+            Jetpack right<br>
+            <br>
+            Background Scenes:<br>
+            Dusty circuitry<br>
+            <br>
+            Screen Rifts:<br>
+            2 line rift<br>
+            3 line rift<br>
+            4 line rift<br>
+            5 line rift<br>
+            <br>
+            Tileset:<br>
+            Platforms<br>
+            Tiles for distorted sections of world<br>
 
         </p>
         <br>
 
         <h3>Sound Effects:</h3>
 
-        <p> Put block in place
-            Knock block out of place
-            Go to next level
-            Reset a level
-            Walking
-            Running
-            Jumping
-            Idle
+        <p style="margin-left: 40px"> Put block in place<br>
+            Knock block out of place<br>
+            Go to next level<br>
+            Reset a level<br>
+            Walking<br>
+            Running<br>
+            Jumping<br>
+            Idle<br>
 
         </p>
         <br>
 
         <h3>Music:</h3>
 
-        <p>Music will be created using BeepBox (beepbox.co), and will be based on “themes”.
-            There will be a Main Theme (the theme of our main character Nort),
-
+        <p style="margin-left: 40px">Music will be created using BeepBox (beepbox.co), and will be based on “themes”.
+            There will be a Main Theme (the theme of our main character Nort),<br>
+            <br>
             These themes will be worked into original music, and there will be a few tracks total.
 
 
         </p>
         <br>
 
-        <h3>Ambient Sounds:</h3>
+        <h3 style="margin-left: 40px">Ambient Sounds:</h3>
 
-        <p>
-        </p>
-        <br>
-
-        <h3>Objective:</h3>
-
-        <p> Hint sounds
-            Distortion sound
+        <p style="margin-left: 40px"> Hint sounds<br>
+            Distortion sound<br>
         </p>
         <br>
 
