--- a/public/benchmark1/index.html
+++ b/public/benchmark1/index.html
@@ -192,7 +192,7 @@
         </p>
         <br>
 
-        <h3 style="margin-left: 40px">Ambient Sounds:</h3>
+        <h3>Ambient Sounds:</h3>
 
         <p style="margin-left: 40px"> Hint sounds<br>
             Distortion sound<br>
