--- a/public/benchmark2/index.html
+++ b/public/benchmark2/index.html
@@ -1,32 +1,12 @@
+<!DOCTYPE html>
 <html>
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-    <title>Source C0de Game Design Document</title>
+    <Script type="text/javascript" src="phaser.min.js"></Script>
+    <Script type="text/javascript" src="game.js"></Script>
 </head>
 
 <body>
-
-    <h2 style="width:750px" align="center">
-        Source C0de<br>
-        Game Design Document
-    </h2>
-
-    <h4 style="width:750px" align="center">
-        by Samuel Hoffmann, Max Wertheim, and Aidan Russell
-    </h4>
-
-    <div id="content">
-
-        <h3>Benchmark 2</h3>
-
-        <p>This page is for Benchmark 2</p>
-        <br>
-
-    </div>
-
-
-
 </body>
 
 </html>
