moved images into benchmark1 recources folder

--- a/public/benchmark1/index.html
+++ b/public/benchmark1/index.html
@@ -133,22 +133,22 @@
 
         <p style="margin-left: 40px">
             Splash Screen:<br>
-            <img src="../images/Background.png" alt="" style="max-width: 100%; max-height: 25vh; margin: auto;"><br>
+            <img src="./resources/Background.png" alt="" style="max-width: 100%; max-height: 25vh; margin: auto;"><br>
             <br>
             Main Menu:<br>
-            <img src="../images/Main Menu.png" alt="" style="max-width: 100%; max-height: 25vh; margin: auto;"><br>
+            <img src="./resources/Main Menu.png" alt="" style="max-width: 100%; max-height: 25vh; margin: auto;"><br>
             <br>
             About Screen:<br>
-            <img src="../images/About.png" alt="" style="max-width: 100%; max-height: 25vh; margin: auto;"><br>
+            <img src="./resources/About.png" alt="" style="max-width: 100%; max-height: 25vh; margin: auto;"><br>
             <br>
             Settings Screen:<br>
-            <img src="../images/Settings.png" alt="" style="max-width: 100%; max-height: 25vh; margin: auto;"><br>
+            <img src="./resources/Settings.png" alt="" style="max-width: 100%; max-height: 25vh; margin: auto;"><br>
             <br>
             Level Scene:<br>
-            <img src="../images/Level Scene.png" alt="" style="max-width: 100%; max-height: 25vh; margin: auto;"><br>
+            <img src="./resources/Level Scene.png" alt="" style="max-width: 100%; max-height: 25vh; margin: auto;"><br>
             <br>
             Pause Menu:<br>
-            <img src="../images/Pause Menu.png" alt="" style="max-width: 100%; max-height: 25vh; margin: auto;"><br>
+            <img src="./resources/Pause Menu.png" alt="" style="max-width: 100%; max-height: 25vh; margin: auto;"><br>
         </p>
         <br>
 
