--- a/public/benchmark2/index.html
+++ b/public/benchmark2/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <Script type="text/javascript" src="phaser.min.js"></Script>
+    <Script type="text/javascript" src="scenes/loadScene.js"></Script>
     <Script type="text/javascript" src="game.js"></Script>
 </head>
 
