added typings to our workspace

--- a/public/benchmark2/index.html
+++ b/public/benchmark2/index.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <Script type="text/javascript" src="phaser.min.js"></Script>
-    <Script type="text/javascript" src="scenes/loadScene.js"></Script>
-    <Script type="text/javascript" src="game.js"></Script>
+    <Script type="text/javascript" src="./lib/phaser.js"></Script>
+    <Script type="text/javascript" src="./src/scenes/loadScene.js"></Script>
+    <Script type="text/javascript" src="./src/game.js"></Script>
 </head>
 
 <body>
