--- a/public/benchmark2/index.html
+++ b/public/benchmark2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="background-color: black; overflow: hidden;">
 
 <head>
     <Script type="text/javascript" src="./lib/phaser.js"></Script>
