nort moves, just a demo, will make levels and such

--- a/public/benchmark2/index.html
+++ b/public/benchmark2/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <Script type="text/javascript" src="./lib/phaser.js"></Script>
-    <Script type="text/javascript" src="./tilemapTest/tilemapTest.js"></Script>
-    <!-- <Script type="text/javascript" src="./src/scenes/loadScene.js"></Script> -->
-    <!-- <Script type="text/javascript" src="./src/game.js"></Script> -->
+    <!-- <Script type="text/javascript" src="./tilemapTest/tilemapTest.js"></Script> -->
+    <Script type="text/javascript" src="./src/scenes/loadScene.js"></Script>
+    <Script type="text/javascript" src="./src/game.js"></Script>
 </head>
 
 <body>
