--- a/public/index.html
+++ b/public/index.html
@@ -1,38 +1,14 @@
-<html>
+<!DOCTYPE html>
+<html style="background-color: black; overflow: hidden;">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-    <title>Source C0de Game Design Document</title>
+    <Script type="text/javascript" src="./lib/phaser.js"></Script>
+    <!-- <Script type="text/javascript" src="./tilemapTest/tilemapTest.js"></Script> -->
+    <Script type="text/javascript" src="./src/scenes/loadScene.js"></Script>
+    <Script type="text/javascript" src="./src/game.js"></Script>
 </head>
 
 <body>
-
-    <h2 align="center">
-        Source C0de<br>
-    </h2>
-
-    <h4 align="center">
-        by Samuel Hoffmann, Max Wertheim, and Aidan Russell
-    </h4>
-    <h4 align="center">
-        <a href="https://github.com/SamuelHHoffmann/Source-C0de">Github Repository</a>
-    </h4>
-
-    <div id="content" , align="center">
-
-        <h3>Main Game Coming Soon!</h3>
-        <a href="https://source-c0de.firebaseapp.com/benchmark1/">Benchmark 1</a><br>
-        <a href="https://source-c0de.firebaseapp.com/benchmark2/">Benchmark 2</a><br>
-        <a href="https://source-c0de.firebaseapp.com/benchmark3/">Benchmark 3</a><br>
-
-        <br>
-
-    </div>
-
-
-
-
-
 </body>
 
 </html>
