Added scene for main menu and started work on scene switching.

--- a/public/benchmark2/index.html
+++ b/public/benchmark2/index.html
@@ -5,6 +5,7 @@
     <Script type="text/javascript" src="./lib/phaser.js"></Script>
     <!-- <Script type="text/javascript" src="./tilemapTest/tilemapTest.js"></Script> -->
     <Script type="text/javascript" src="./src/scenes/loadScene.js"></Script>
+    <script type="text/javascript" src="./src/scenes/mainMenu.js"></script>
     <Script type="text/javascript" src="./src/game.js"></Script>
 </head>
 
