working on the level select screen and then an actual level

--- a/public/benchmark2/index.html
+++ b/public/benchmark2/index.html
@@ -5,6 +5,7 @@
     <Script type="text/javascript" src="./lib/phaser.js"></Script>
     <!-- <Script type="text/javascript" src="./tilemapTest/tilemapTest.js"></Script> -->
     <Script type="text/javascript" src="./src/scenes/loadScene.js"></Script>
+    <Script type="text/javascript" src="./src/scenes/levelSelect.js"></Script>
     <script type="text/javascript" src="./src/scenes/mainMenu.js"></script>
     <script type="text/javascript" src="./src/scenes/about.js"></script>
     <script type="text/javascript" src="./src/scenes/settings.js"></script>
