--- a/public/benchmark2/index.html
+++ b/public/benchmark2/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="./src/scenes/mainMenu.js"></script>
     <script type="text/javascript" src="./src/scenes/about.js"></script>
     <script type="text/javascript" src="./src/scenes/settings.js"></script>
+    <script type="text/javascript" src="./src/scenes/effectsTest.js"></script>
     <Script type="text/javascript" src="./src/game.js"></Script>
 </head>
 
