Started work on console which will be used for cheats.

--- a/public/benchmark2/index.html
+++ b/public/benchmark2/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="./src/scenes/about.js"></script>
     <script type="text/javascript" src="./src/scenes/settings.js"></script>
     <script type="text/javascript" src="./src/scenes/effectsTest.js"></script>
+    <script type="text/javascript" src="./src/console.js"></script>
     <Script type="text/javascript" src="./src/game.js"></Script>
 </head>
 
