made nort skinnier

--- a/public/benchmark2/index.html
+++ b/public/benchmark2/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <Script type="text/javascript" src="./lib/phaser.js"></Script>
+    <Script type="text/javascript" src="./lib/phaser-slopes.min.js"></Script>
     <!-- <Script type="text/javascript" src="./tilemapTest/tilemapTest.js"></Script> -->
     <Script type="text/javascript" src="./src/scenes/levelScene.js"></Script>
     <Script type="text/javascript" src="./src/scenes/levelSelect.js"></Script>
