--- a/public/benchmark2/index.html
+++ b/public/benchmark2/index.html
@@ -4,7 +4,7 @@
 <head>
     <Script type="text/javascript" src="./lib/phaser.js"></Script>
     <Script type="text/javascript" src="./lib/phaser-slopes.min.js"></Script>
-    <!-- <Script type="text/javascript" src="./tilemapTest/tilemapTest.js"></Script> -->
+    <Script type="text/javascript" src="./src/riftActionManager.js"></Script>
     <Script type="text/javascript" src="./src/rift.js"></Script>
     <Script type="text/javascript" src="./src/scenes/levelScene.js"></Script>
     <Script type="text/javascript" src="./src/scenes/levelSelect.js"></Script>
