--- a/public/benchmark2/index.html
+++ b/public/benchmark2/index.html
@@ -6,6 +6,7 @@
     <Script type="text/javascript" src="./lib/phaser-slopes.min.js"></Script>
     <Script type="text/javascript" src="./src/riftActionManager.js"></Script>
     <Script type="text/javascript" src="./src/rift.js"></Script>
+    <Script type="text/javascript" src="./src/scenes/pauseScene.js"></Script>
     <Script type="text/javascript" src="./src/scenes/levelScene.js"></Script>
     <Script type="text/javascript" src="./src/scenes/levelSelect.js"></Script>
     <script type="text/javascript" src="./src/scenes/mainMenu.js"></script>
